<resources>
    <string name="app_name">LastMySpaza</string>
    <string name="title_stats">Stats</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <!--AUTHENTICATION STRINGS -->
    <string name="text_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_add_product">Add Product</string>
    <string name="action_add_store">Add Store</string>
    <string name="action_done">Done</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_continue">Continue</string>
    <!-- Personal Details-->
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>

    <!--Account Details-->
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>

    <!--Spaza Details-->
    <string name="input_store_name">Spaza Name</string>
    <string name="input_store_location">Spaza Location</string>

    <!--Product-->
    <string name="input_product_name">Product Name</string>
    <string name="input_product_category">Product Category</string>
    <string name="input_product_price">Product Price</string>
    <string name="input_product_quantity">Product Quantity</string>
    <string name="input_products_available">Available products</string>
    <string name="switch_text">Add product weight</string>
    <string name="product_details">Product Details</string>

    <string name="product_weight_prompt">select_weight</string>

    <string-array name="product_weight">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_stores">Stores</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>

    <!-- Alert Dialog -->
    <string name="confirm_remove_store_title">Are you sure?</string>
    <string name="confirm_remove_store">Removing store will also deactivate store manager account</string>

    <string name="confirm_logout_title">Sign Out</string>
    <string name="confirm_logout">Are you sure you want to sign out?</string>
</resources>
