<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_inventory" />
    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_inventory" />
    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
